--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^2.3.5",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@popperjs/core": "^2.10.2",
     "@reduxjs/toolkit": "^1.6.2",
     "@taquito/beacon-wallet": "^10.2.0",
+    "@taquito/michel-codec": "^14.0.0",
     "@taquito/taquito": "^10.2.0",
     "@taquito/tzip12": "^10.2.0",
     "@taquito/tzip16": "^10.2.0",
@@ -14,6 +18,8 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.22.0",
     "bootstrap": "^5.1.3",
+    "crypto-js": "^4.1.1",
+    "merkletreejs": "^0.2.32",
     "nft.storage": "^3.3.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.5.0",
